ddBoot/css/main.css
body{
	/*background-image: url("rocketTilesLowContrast.jpg");*/
	background: -webkit-linear-gradient(#111,#111);
	/*background-repeat:no-repeat;*/
}


h1{
	color: #65c8c6;
	font-family: 'Luckiest Guy', cursive;
	font-size: 2.0em;
	font-weight: 600;
	/*text-shadow: -1px -1px #fff;*/
	letter-spacing:3px
	}

h2 {
	color: #C8C265;
	font-family: 'Raleway', sans-serif;
	font-size: 1.2em;
	font-weight: 300;
	margin-bottom: 5px;
	margin-top: -16px;
	margin-left: 0%;
	letter-spacing:0.01em;
	/*text-shadow: 1px 1px #222;*/
}


#containerDiv{
	background-color:transparent;
	height:auto;
	margin-top:20px;
	margin-left:20%;
	margin-right:20%;
	padding:10px;
	width:60%;
	}
#header {
	background-color:transparent;
	width:auto;
	
	
}
hgroup{
	width:parent;
}

#contentLeft{
	background-color:transparent;
	border-top: 1px solid #555;
	color:#888;
	font-family: 'Raleway', sans-serif;
	height:parent;
	}
	
#contentLeft a{
	background-color:transparent;
	color:#65c8c6;
	font-family: 'Raleway', sans-serif;
	height:parent;
	}
	
#contentLeft a:hover{
	background-color:transparent;
	color:#C8C265;
	font-family: 'Raleway', sans-serif;
	height:parent;
	}

#quickLinks{
	background-color:transparent;
	border-top: 1px solid #555;
	border-left: 1px solid #555;
	color:#fff;
	font-family: 'Jura', sans-serif;
	font-size: 1.2em;
	font-weight: 300;
	}

#quickLinks p{
	font-family: 'Raleway', sans-serif;
	font-size: 1.0em;
	font-weight: 300;
	}
	
#quickLinks a{
	color: #fff;
	font-family: 'Raleway', sans-serif;
	font-size: 0.75em;
	font-weight: 300;
	letter-spacing:0.1em;
	}

#quickLinks a:hover{
	color: #C8C265;
	font-family: 'Raleway', sans-serif;
	font-size: 0.75em;
	font-weight: 300;
	letter-spacing:0.1em;
	}


.alt{
	background-color:#222;	
}

 #nav {
	display: inline;
	background-color: transparent;
	border-top: 1px solid #555;
	margin-right: 0;
	width: 100%;
	height: auto;
}

 #nav ul {
	float: left;
	width: 100%;
	padding-left: 0;
	
	/*margin-top: 10px;*/
	margin-left: 0;
	list-style-type: none;
	list-style-position: inside;
	text-align:left;
	}

#nav li {
	color:#888;
	display: inline;
	font-family: 'Raleway', sans-serif;
	font-size: 0.9em;
	font-weight: 400;
	padding-left:0px;
	padding-right:40px;
	text-align: left;
	text-indent: none;
}


 #nav a {
	color: #F1F1F2;
	font-family: 'Raleway', sans-serif;
	font-size: 0.9em;
	font-weight: 400;
	line-height: 15px;
	width: 3.5em;
	text-align: center;
	text-decoration: none;
	text-shadow: 1px 0px #000;
	}

#nav a:hover {
	/*background-color: #333;*/
	color: #65C8C6;
	float: left;
	font-family: 'Raleway', sans-serif;
	font-weight: 400;
	line-height: 15px;
	width: 3.5em;
	text-decoration: none;
	}

 #nav .current {
	color: #BF2E1A;
	font-family: 'Raleway', sans-serif;
	font-weight: 400;
	text-decoration: none;
	}

/*https://bootstrapbay.com/blog/bootstrap-button-styles/ */	
.btn{
background-color:transparent;
border: 0 none;
border-radius:0;
color:#888;
font-family: 'Raleway', sans-serif;
margin-left:-10px;
margin-right:30px;
}

#dropMenu {
	background-color:#000;
	height:150px;
	margin:0;
	padding:0;
	width:100px;
	
}

#dropMenu a{
	color:#65c8c6;
	font-family: 'Raleway', sans-serif;
	margin:0;
	padding:0;
	
	
}
#dropMenu a:hover{
	color:#C8C265;
	font-family: 'Raleway', sans-serif;
	margin:0;
	padding:0;
	
}
	
	

.boldTitles {
	color: #C8C265;
	font-family: 'Luckiest Guy', cursive;
	font-size:1.0em;
	font-weight: 200;
	/*margin-top:25px;*/
	letter-spacing:1px;
	text-align: left;
}
.thinTitles{
	color: #C8C265;
	font-family: 'Raleway', sans-serif;
	font-size: 0.85em;
	font-weight: 300;
	margin-bottom: 5px;
	margin-left: 0%;
	letter-spacing:0.01em;
	/*text-shadow: 1px 1px #222;*/
}	


#footer {
	background-color:transparent;
	border-top: 1px solid #555;
	color: #C8C265;
	font-family: 'Raleway', sans-serif;
	font-size: 0.85em;
	font-weight: 300;
	letter-spacing:0.01em;
	/*text-shadow: 1px 1px #222;*/
	}

